@startuml
' Clase Cliente
class Cliente {
  - idCliente : int
  - nombre : string
  - correo : string
  - password : string
  + login() : boolean
  + registrar() : void
  + actualizarDatos() : void
  + consultarReservas() : List<Reserva>
}

' Clase Reserva
class Reserva {
  - idReserva : int
  - fechaInicio : Date
  - fechaFin : Date
  - estado : string
  + calcularCosto() : decimal
  + confirmar() : boolean
  + cancelar() : void
}

' Clase Habitacion
class Habitacion {
  - idHabitacion : int
  - numero : string
  - tipo : string
  - precio : decimal
  - estado : string
  + consultarDisponibilidad(fechaInicio : Date, fechaFin : Date) : boolean
}

' Clase Pago
class Pago {
  - idPago : int
  - fechaPago : Date
  - monto : decimal
  - estado : string
  + procesarPago(datos : PaymentData) : boolean
  + emitirComprobante() : void
}

' Clase Administrador
class Administrador {
  - idAdministrador : int
  - nombre : string
  - correo : string
  - password : string
  + gestionarReservas() : void
  + actualizarPrecios() : void
  + generarReporte() : Report
  + actualizarInformacionHabitaciones() : void
}

' Relaciones entre clases
Cliente "1" -- "*" Reserva : realiza
Reserva "1" -- "1" Pago : tiene
Reserva "*" -- "*" Habitacion : incluye

@enduml